--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 name = "p2p_client"
 path = "src/p2p_client.rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
+[target.x86_64-pc-windows-gnu]
+rustflags = ["-C", "linker=clang-12"]
 [dependencies]
